name: Haku
version: 0.0.31
license: AGPL-3

build-type: Simple
cabal-version: 2.0

Executable haku
  default-language: Haskell2010
  Main-Is: Main.hs
  Other-Modules:
    Types,
    Constants,
    Hacks,
    Paths,
    Env,
    Utils,
    Version,
    Shelter.Types,
    Shelter.Trim,
    Shelter.Hashes,
    Shelter.Checker,
    Portage.Types.Version,
    Portage.Types.Package,
    Portage.Types.Config,
    Portage.Version,
    Portage.Config,
    Portage.Utils,
    Portage.Ebuild,
    Commands.Get,
    Commands.Delete,
    Commands.Find,
    Commands.Update,
    Commands.Upgrade,
    Commands.UwU,
    Commands.Clean,
    Commands.Belongs,
    Commands.Test,
    Paths_Haku
  Hs-Source-Dirs: src
  Build-Depends:
      base >= 4,
      process,
      containers,
      directory,
      filepath,
      unix,
      parsec,
      split,
      text,
      strict,
      ansi-terminal,
      binary,
      bytestring,
      time,
      base-unicode-symbols,
      yaml,
      aeson,
      mtl
 ghc-options:
    -Wall
