name: Haku
version: 0.0.67
license: AGPL-3

build-type: Simple
cabal-version: 2.0

Executable haku
  default-language: Haskell2010
  Main-Is: Haku.hs
  Other-Modules:
    Types,
    Constants,
    Hacks,
    Paths,
    Env,
    Utils,
    Version,
    Logger,
    Commands,
    Shelter.Types,
    Shelter.Trim,
    Shelter.Hashes,
    Shelter.Checker,
    Portage.Types.Version,
    Portage.Types.Package,
    Portage.Types.Atom,
    Portage.Types.Masking,
    Portage.Types.Config,
    Portage.Version,
    Portage.P,
    Portage.Atom,
    Portage.Mask,
    Portage.Config,
    Portage.Utils,
    Portage.Ebuild,
    Commands.Get,
    Commands.Delete,
    Commands.Find,
    Commands.Update,
    Commands.Updates,
    Commands.Live,
    Commands.Upgrade,
    Commands.UwU,
    Commands.Clean,
    Commands.Belongs,
    Commands.Digest,
    Paths_Haku
  Hs-Source-Dirs: src
  Build-Depends:
      base >= 4,
      process,
      containers,
      directory,
      filepath,
      unix,
      parsec,
      split,
      text,
      strict,
      ansi-terminal,
      binary,
      bytestring,
      time,
      base-unicode-symbols,
      yaml,
      aeson,
      mtl,
      regex-tdfa,
      raw-strings-qq
 ghc-options:
    -Wall
