name: Haku
version: 2.0.5
license: AGPL-3

build-type: Simple
cabal-version: 2.0

Executable haku
  default-language: Haskell2010
  Main-Is: Haku.hs
  default-extensions:
    CPP
    LambdaCase
    MultiWayIf
    UnicodeSyntax
    FlexibleContexts
    DeriveGeneric
    TupleSections
    TypeOperators
  Other-Modules:
    Types,
    Constants,
    Hacks,
    Paths,
    Env,
    Utils,
    Version,
    Logger,
    Console,
    Commands,
    Shelter.Types,
    Shelter.Hashes,
    Shelter.Checker,
    Portage.Types.Version,
    Portage.Types.Package,
    Portage.Types.Atom,
    Portage.Types.Masking,
    Portage.Types.Config,
    Portage.Version,
    Portage.P,
    Portage.Atom,
    Portage.Mask,
    Portage.Config,
    Portage.Utils,
    Portage.Ebuild,
    Commands.Get,
    Commands.Delete,
    Commands.Find,
    Commands.Update,
    Commands.Updates,
    Commands.Live,
    Commands.Upgrade,
    Commands.UwU,
    Commands.Clean,
    Commands.Belongs,
    Commands.Digest,
    Commands.Test,
    Commands.Commit,
    Paths_Haku
  Hs-Source-Dirs: src
  Build-Depends:
      base >= 4,
      process,
      containers,
      directory,
      filepath,
      unix,
      parsec,
      split,
      text,
      strict,
      ansi-terminal,
      binary,
      bytestring,
      time,
      base-unicode-symbols,
      yaml,
      aeson,
      mtl,
      async,
      terminfo
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N
